ALOT of bug fixes(Images not sizing properly,footer highlighting, Overlapping images with hover on filter)

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
 }
   
 .grid-container img {
-    min-height: 80%;
+    min-height:60%;
     max-height: 80%;
     width: 100%;
     position: relative;
@@ -258,7 +258,7 @@ footer .content a:hover {
       border-top:none;
       vertical-align: bottom;
       margin-left:3%;
-   
+    font-size: 0.8em;
   }
  
 
@@ -347,10 +347,10 @@ footer .content a:hover {
         display: none;
     }
     .name{
-        font-size: 0.8em;
+        font-size: 0.6em;
     }
     .price{
-        font-size: 0.7em;
+        font-size: 0.6em;
     }
     .grid-container{
         width:90%;
@@ -358,6 +358,7 @@ footer .content a:hover {
     #Filter-icon{
         display:block;
     }
+    
 
 }
 
