--- a/style2.css
+++ b/style2.css
@@ -1,17 +1,17 @@
 /* Hide Dropdowns by Default */
-ul ul {
+#Filter-icon ul ul {
 	display: none;
 	position: absolute; 
 	top: 3.75em; /* the height of the main nav */
 }
 	
 /* Display Dropdowns on Hover */
- ul li:hover > ul {
+#Filter-icon ul li:hover > ul {
 	display:inherit;
 }
 	
 /* Fisrt Tier Dropdown */
-ul ul li {
+#Filter-icon ul ul li {
 	width:11em;
 	float:none;
 	display:list-item;
@@ -20,7 +20,7 @@ ul ul li {
 }
 
 /* Second, Third and more Tiers	*/
- ul ul ul li {
+#Filter-icon ul ul ul li {
 	position: relative;
 	top:-3.75em; 
 	left:10.625em;
@@ -28,15 +28,17 @@ ul ul li {
 }
 
 
-ul {
+#Filter-icon ul {
 	padding: 0;
   margin: 0;
 	list-style: none;
 	position: relative;
 	}
 	
- ul li {
+	#Filter-icon ul li {
 	display:inline-block;
 	background-color: #ffffff;
     color:pink;
+	z-index: 99;
+
 	}
